--- a/calculator/calculator.css
+++ b/calculator/calculator.css
@@ -17,7 +17,7 @@ body {
     font-size: 40px;
     font-family:'Courier New', Courier, monospace;
     text-align: right;
-    padding: 2opx 5px; 
+    padding: 20px 5px; 
 }
 
 .calc-button {
